# BitTorrent-Client

./: CMakeLists.txt  LICENSE  README.md
src/: Main.cpp
src/bencode/: decode.cpp  decode.hpp  encode.cpp  encode.hpp  type.hpp
src/client/: client.cpp  client.hpp  connection.cpp  connection.hpp
src/messageHandler/: message.cpp  message.hpp  messageHandler.cpp  messageHandler.hpp
src/metainfo/: metainfo.cpp  metainfo.hpp  sha1.hpp
